  EntityTestUnit moved into org.jminor.framework.domain.testing
  EntityApplicationPanelTestUnit and EntityEditPanelTestUnit moved into org.jminor.swing.framework.ui.testing
  Ant build jdeps target added
  REST plugin uses Base64 instead of DatatypeConverter
  Server module tests no longer depend on framework-db-remote module
  Databases.isDatabaseTypeSpecified() moved to Database
  EntityGeneratorModel and EntityGeneratorPanel moved to swing.framwork.model and ui respectively
  IntelliJ modules synced with ivy dependencies
  Logback dependencies cleaned up
  EntityConditions.propertyCondition() now throws a more descriptive error when called with a foreign key property parameter
  EntityConditions.DefaultEntityCondition bug fixed, getValues() and getColumns() now return empty list instead of null when no property condition is available
  Resources moved to standard src/main/resources directory
  DefaultEntityConnectionServer now extends AbstractServer<AbstractRemoteEntityConnection, EntityConnectionServerAdmin>
  Some javadoc improvements
  Entities.getColumnProperties() and DateUtil.floorFields(), vararg parameter replaced with a collection
  LoggerProxy added, LogbackProxy module added, Logback dependencies removed
  Some build file improvements
  Build file streamlined a bit, deployment targets improved
  Server monitor ivy dependencies fixed, maven no longer pulls local db jar along
  Log4jProxy plugin module added
  Throw exception instead of returning null in a few cases
  RemoteEntityConnection moved from framework.db to framework.db.remote, server now depends on db-remote, test moved
  Abstract unit test classes in framework-model-unittests moved to package framework.model.testing
  module-info.java added for common and framework modules, ignored during build
  AbstractEntityConnectionProvider refactored a bit
  EntityConditions refactored, ForeignKeyCondition and EntityKeyCondition classes removed