@@ -4530,3 +4530,4 @@
   module-info.java added for common and framework modules, ignored during build
   AbstractEntityConnectionProvider refactored a bit
   EntityConditions refactored, ForeignKeyCondition and EntityKeyCondition classes removed
+  EntityDefinition.getForeignKeyReferences() added
